--- a/Text_Classification_for_Toxic_comments.ipynb
+++ b/Text_Classification_for_Toxic_comments.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPhn5GJ4pCk1elVXcH9HO6j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +27,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "OCLwU7xr0nYm"
       },
       "outputs": [],
       "source": [
-        "# Import necessary libraries\n",
         "import pandas as pd\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -46,13 +44,13 @@
       "cell_type": "code",
       "source": [
         "# Load the dataset\n",
-        "file_path = '/content/youtoxic_english_1000.csv'  # Adjust the path as needed\n",
+        "file_path = '/content/youtoxic_english_1000.csv'\n",
         "data = pd.read_csv(file_path)\n"
       ],
       "metadata": {
         "id": "yVhqtqkzoxYN"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -65,19 +63,19 @@
       "metadata": {
         "id": "OwU1qyMwoz1V"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Split the data into training and testing sets (80% train, 20% test)\n",
+        "# Split the data into training and testing sets\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
       ],
       "metadata": {
         "id": "UY44V_Wdo2kv"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -91,7 +89,7 @@
       "metadata": {
         "id": "j8UwE5jKo4az"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -109,7 +107,7 @@
         "id": "4aIDmZsGo479",
         "outputId": "ab740c3a-57c4-4ac7-a6ad-5469b8a3569d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -135,7 +133,7 @@
       "metadata": {
         "id": "Duwwfkk9o8n7"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -152,7 +150,7 @@
         "id": "oyrBlP5Co-Rf",
         "outputId": "d4e87e21-d11c-4da7-cab1-9f7a77240bc9"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +181,7 @@
       "metadata": {
         "id": "hTc5rKhZpAxq"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -202,7 +200,7 @@
         "id": "BUj9WbnapBTl",
         "outputId": "db778566-d5ef-4813-f295-6a209cdfcdd2"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
